force-app/main/default/objects/Tilewall_Config__c/Tilewall_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Tilewall Config</label>
</CustomObject>