force-app/main/default/objects/Tilewall_Config__c/fields/allowSearch__c.field-meta.xml
<CustomField>
    <fullName>allowSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adds a search box to the header of the component to enable free-text search of the records. Uses SOSL search which searches most fields, including those not displayed in the tile.</inlineHelpText>
    <label>Allow Search</label>
    <type>Checkbox</type>
</CustomField>