force-app/main/default/objects/Tilewall_Config__c/fields/backgroundColor__c.field-meta.xml
<CustomField>
    <fullName>backgroundColor__c</fullName>
    <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
    <inlineHelpText>Background color for the overall Tile Wall component</inlineHelpText>
    <label>Tile Wall Background Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>