force-app/main/default/objects/Tilewall_Config__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
    <inlineHelpText>Background color for each individual tile.  6-character HEX format (eg #FFFFFF) MUST be used if opacity is specified.</inlineHelpText>
    <label>Tile Background Color</label>
    <length>55</length>
    <type>Text</type>
</CustomField>