force-app/main/default/objects/Tilewall_Config__c/fields/colorFieldName__c.field-meta.xml
<CustomField>
    <fullName>colorFieldName__c</fullName>
    <inlineHelpText>API Name of a record field that provides the background color for the tile, eg. through a formula.  6-char HEX format (eg #FFFFFF) MUST be used by this field if opacity is specified.</inlineHelpText>
    <label>Tile Background Color Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>