force-app/main/default/objects/Tilewall_Config__c/fields/columnsLarge__c.field-meta.xml
<CustomField>
    <fullName>columnsLarge__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Tiles per Row (Desktop)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>