force-app/main/default/objects/Tilewall_Config__c/fields/columnsMedium__c.field-meta.xml
<CustomField>
    <fullName>columnsMedium__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Tiles per Row (Tablet)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>