force-app/main/default/objects/Tilewall_Config__c/fields/columnsSmall__c.field-meta.xml
<CustomField>
    <fullName>columnsSmall__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Tiles per Row (Mobile)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>