force-app/main/default/objects/Tilewall_Config__c/fields/displayCount__c.field-meta.xml
<CustomField>
    <fullName>displayCount__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Display the record count in brackets in the component header.</inlineHelpText>
    <label>Display Record Count</label>
    <type>Checkbox</type>
</CustomField>