force-app/main/default/objects/Tilewall_Config__c/fields/fieldStyle__c.field-meta.xml
<CustomField>
    <fullName>fieldStyle__c</fullName>
    <defaultValue>&apos;horizontal&apos;</defaultValue>
    <inlineHelpText>Options: horizontal,stacked</inlineHelpText>
    <label>Field Style</label>
    <length>55</length>
    <type>Text</type>
</CustomField>