force-app/main/default/objects/Tilewall_Config__c/fields/fixedHeight__c.field-meta.xml
<CustomField>
    <fullName>fixedHeight__c</fullName>
    <inlineHelpText>Fixed Height in pixels (px) or percent (%).  Enter the number and the unit - eg 200px or 10%</inlineHelpText>
    <label>Fixed Height</label>
    <length>20</length>
    <type>Text</type>
</CustomField>