force-app/main/default/objects/Tilewall_Config__c/fields/heightOption__c.field-meta.xml
<CustomField>
    <fullName>heightOption__c</fullName>
    <defaultValue>&apos;max-row&apos;</defaultValue>
    <inlineHelpText>Options: max-row,fixed,individual.  Max-Row: Tile auto-size height to fit contents, each tile in a row will be the same height; Fixed: Fixed at specified height; Individual: Each tile sized to fit content.</inlineHelpText>
    <label>Tile Height</label>
    <length>30</length>
    <type>Text</type>
</CustomField>