force-app/main/default/objects/Tilewall_Config__c/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <inlineHelpText>(Optional) Enter the icon name to appear in the header, eg. standard:account or utility:event. Google &apos;slds icons&apos; to see them all.</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>