force-app/main/default/objects/Tilewall_Config__c/fields/iconSize__c.field-meta.xml
<CustomField>
    <fullName>iconSize__c</fullName>
    <defaultValue>&quot;small&quot;</defaultValue>
    <inlineHelpText>Size for the Title Icon.</inlineHelpText>
    <label>Icon Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>