force-app/main/default/objects/Tilewall_Config__c/fields/imageFieldName__c.field-meta.xml
<CustomField>
    <fullName>imageFieldName__c</fullName>
    <inlineHelpText>API Name of a record field that provides the URL for that tile&apos;s background, eg. through a formula field. Make sure the site hosting the image is added to CSP Trusted Sites if this component is used in Experience Cloud.</inlineHelpText>
    <label>Tile Background Image Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>