force-app/main/default/objects/Tilewall_Config__c/fields/imageURL__c.field-meta.xml
<CustomField>
    <fullName>imageURL__c</fullName>
    <inlineHelpText>URL for a default image to be used as each tile&apos;s background. If the Tile Wall is being displayed in Experience Cloud, make sure the site hosting the image is included as a CSP trusted site.</inlineHelpText>
    <label>Tile Background Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>