force-app/main/default/objects/Tilewall_Config__c/fields/limitResults__c.field-meta.xml
<CustomField>
    <fullName>limitResults__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Controls how many records will be displayed on each page</inlineHelpText>
    <label>Limit Displayed Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>