force-app/main/default/objects/Tilewall_Config__c/fields/media__c.field-meta.xml
<CustomField>
    <fullName>media__c</fullName>
    <inlineHelpText>Icon Name (eg. standard:product) OR Image Url</inlineHelpText>
    <label>Media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>