force-app/main/default/objects/Tilewall_Config__c/fields/mediaFieldname__c.field-meta.xml
<CustomField>
    <fullName>mediaFieldname__c</fullName>
    <label>Media Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>