force-app/main/default/objects/Tilewall_Config__c/fields/mediaFormat__c.field-meta.xml
<CustomField>
    <fullName>mediaFormat__c</fullName>
    <defaultValue>&apos;default&apos;</defaultValue>
    <inlineHelpText>Options: default, circle</inlineHelpText>
    <label>Media Format</label>
    <length>55</length>
    <type>Text</type>
</CustomField>