force-app/main/default/objects/Tilewall_Config__c/fields/mediaSize__c.field-meta.xml
<CustomField>
    <fullName>mediaSize__c</fullName>
    <defaultValue>&apos;medium&apos;</defaultValue>
    <inlineHelpText>x-small, small, medium, large</inlineHelpText>
    <label>Media Size</label>
    <length>55</length>
    <type>Text</type>
</CustomField>