force-app/main/default/objects/Tilewall_Config__c/fields/noResultsText__c.field-meta.xml
<CustomField>
    <fullName>noResultsText__c</fullName>
    <defaultValue>&apos;No results found, try searching for something else.&apos;</defaultValue>
    <inlineHelpText>Text to display if no results are found after searching</inlineHelpText>
    <label>No Search Results Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>