force-app/main/default/objects/Tilewall_Config__c/fields/opacity__c.field-meta.xml
<CustomField>
    <fullName>opacity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Opacity of the tiles between 0.0 ((fully transparent) and 1.0 opaque). 6-char HEX color values (eg. #FFFFFF) must be used if opacity is set. Opacity doesn&apos;t work on iOS, tiles will fallback to default background color (no background image).</inlineHelpText>
    <label>Tile Background Opacity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>