force-app/main/default/objects/Tilewall_Config__c/fields/orderBy__c.field-meta.xml
<CustomField>
    <fullName>orderBy__c</fullName>
    <inlineHelpText>Use SOQL Syntax for advanced ordering eg. &apos;Name ASC, CloseDate DESC&apos;</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>