force-app/main/default/objects/Tilewall_Config__c/fields/orderByDirection__c.field-meta.xml
<CustomField>
    <fullName>orderByDirection__c</fullName>
    <defaultValue>&apos;ASC&apos;</defaultValue>
    <inlineHelpText>ASC, DESC</inlineHelpText>
    <label>Order By Direction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>