force-app/main/default/objects/Tilewall_Config__c/fields/orderByFieldname__c.field-meta.xml
<CustomField>
    <fullName>orderByFieldname__c</fullName>
    <label>Order By Fieldname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>