force-app/main/default/objects/Tilewall_Config__c/fields/padding__c.field-meta.xml
<CustomField>
    <fullName>padding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applies padding to the left and right of each field and label.  In horizontal mode, a small amount of padding will be applied to the right of the label if unchecked, to enable separation.</inlineHelpText>
    <label>Field Padding</label>
    <type>Checkbox</type>
</CustomField>