force-app/main/default/objects/Tilewall_Config__c/fields/searchLabel__c.field-meta.xml
<CustomField>
    <fullName>searchLabel__c</fullName>
    <defaultValue>&apos;Search&apos;</defaultValue>
    <inlineHelpText>Label for the search box, if displayed.</inlineHelpText>
    <label>Search Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>