force-app/main/default/objects/Tilewall_Config__c/fields/showMedia__c.field-meta.xml
<CustomField>
    <fullName>showMedia__c</fullName>
    <inlineHelpText>Options: icon, image, none</inlineHelpText>
    <label>Show Media</label>
    <length>10</length>
    <type>Text</type>
</CustomField>