force-app/main/default/objects/Tilewall_Config__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <defaultValue>&apos;cover&apos;</defaultValue>
    <inlineHelpText>Google &apos;css background-size&apos; for details of each option. Options: auto,length,cover,contain,initial,inherit.</inlineHelpText>
    <label>Tile Background Image Size</label>
    <length>55</length>
    <type>Text</type>
</CustomField>