force-app/main/default/objects/Tilewall_Config__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <inlineHelpText>Title for the header of the tile wall component (as opposed to an individual tile)</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>