force-app/main/default/objects/Tilewall_Config__c/fields/titleAlign__c.field-meta.xml
<CustomField>
    <fullName>titleAlign__c</fullName>
    <defaultValue>&apos;left&apos;</defaultValue>
    <inlineHelpText>Title Alignment. Options: left,center,right</inlineHelpText>
    <label>Title Alignment</label>
    <length>55</length>
    <type>Text</type>
</CustomField>