force-app/main/default/objects/Tilewall_Config__c/fields/titleName__c.field-meta.xml
<CustomField>
    <fullName>titleName__c</fullName>
    <label>Title API Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>