force-app/main/default/objects/Tilewall_Config__c/fields/titleSize__c.field-meta.xml
<CustomField>
    <fullName>titleSize__c</fullName>
    <defaultValue>&apos;body_regular&apos;</defaultValue>
    <inlineHelpText>Text size style for the title (google &apos;slds text&apos; for examples of each style). Options: body_regular,body_small,heading_large,heading_medium,heading_small</inlineHelpText>
    <label>Title Size</label>
    <length>55</length>
    <type>Text</type>
</CustomField>