force-app/main/default/objects/Tilewall_Config__c/fields/titleTextCase__c.field-meta.xml
<CustomField>
    <fullName>titleTextCase__c</fullName>
    <defaultValue>&apos;default&apos;</defaultValue>
    <inlineHelpText>Title Case Display. Options: default,lowercase,uppercase</inlineHelpText>
    <label>Title Text Case</label>
    <length>55</length>
    <type>Text</type>
</CustomField>