force-app/main/default/objects/Tilewall_Config__c/fields/useAdvancedOrdering__c.field-meta.xml
<CustomField>
    <fullName>useAdvancedOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Advanced Order</label>
    <type>Checkbox</type>
</CustomField>